--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/react-helmet": "^6.1.5",
     "axios": "^0.25.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.2.2",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
