--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.5",
+    "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-window": "^1.8.5",
     "axios": "^0.25.0",
     "formik": "^2.2.9",
     "moment": "^2.29.1",
@@ -22,9 +24,12 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.2.2",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-lazyload": "^3.2.0",
     "react-moment": "^1.1.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-window": "^1.8.6",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -51,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-lazyload": "^3.1.1"
   }
 }
