--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-window": "^1.8.5",
     "axios": "^0.25.0",
     "formik": "^2.2.9",
+    "html-react-parser": "^1.4.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
