--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/lab": "^5.0.0-alpha.44",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
     "@testing-library/jest-dom": "^5.16.1",
@@ -18,6 +20,7 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-window": "^1.8.5",
+    "@types/swiper": "^6.0.0",
     "axios": "^0.25.0",
     "formik": "^2.2.9",
     "html-react-parser": "^1.4.6",
@@ -33,6 +36,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-window": "^1.8.6",
+    "swiper": "^8.0.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
